--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,8 +1,51 @@
 .about {
   width: 100%;
-  height: 100vh;
-  background-color: grey;
+  min-height: 100vh;
+  background-color: #efeff0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  font-weight: 600;
+
+  .descriptionBox {
+    width: 32%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      padding: 1rem 0;
+    }
+
+    &__ornament {
+      height: 2rem;
+    }
+
+    &__signature {
+      display: flex;
+      align-self: flex-end;
+
+      img {
+        height: 10rem;
+      }
+    }
+
+    p {
+      font-size: 1.8rem;
+      line-height: 3.5rem;
+      text-align: center;
+      padding: 3rem 0;
+    }
+  }
+
+  .imageBox {
+    width: 55%;
+    margin-left: 3%;
+
+    img {
+      width: 100%;
+    }
+  }
 }
