--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,8 @@
 * {
   font-family: 'Open Sans', sans-serif;
+  font-size: 100%;
   font-weight: 300;
+  color: $color-text;
 
   h1, h2 {
     font-size: 2.5rem;
