--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,6 +1,7 @@
 .about {
   width: 100%;
   min-height: 100vh;
+  padding: 2rem 0;
   background-color: #efeff0;
   display: flex;
   justify-content: flex-end;
