--- a/src/components/Achievements/Achievements.scss
+++ b/src/components/Achievements/Achievements.scss
@@ -1,8 +1,16 @@
 .achievements {
   width: 100%;
-  min-height: 300px;
-  background-color: grey;
+  min-height: 370px;
+  background: url("/images/Bg.png") repeat;
   display: flex;
-  justify-content: center;
+}
+
+
+.achievementsBox {
+  width: 100%;
+  min-height: 300px;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
+  align-self: center;
 }
