--- a/src/components/Step/Step.scss
+++ b/src/components/Step/Step.scss
@@ -32,6 +32,10 @@
     justify-content: center;
     align-items: flex-start;
     margin: 0.5rem 0;
+
+    p {
+      font-weight: 400;
+    }
   }
 
   hr {
