--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,101 @@
 .header {
   width: 100%;
   height: 100vh;
+  max-height: 1000px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  background: url("/images/photo_header.jpg");
+  background-size: contain;
+  background-size: 75v;
+  background-repeat: no-repeat;
+  background-position-x: -300px;
+  background-position-y: bottom;
+}
+
+.navigation {
+  margin: 2rem 10%;
+
+  &__buttons {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      font-size: 0.9rem;
+      padding: 0.5rem 1rem;
+      text-decoration: none;
+      border: 1px solid white;
+
+      &:hover {
+        border: 1px solid #f9c910;
+      }
+    }
+  }
+
+  &__list {
+    li {
+      display: inline-block;
+      margin: 0 0.5rem;
+      padding: 0.75rem 1.25rem;
+      font-size: 1.15rem;
+      border: 1px solid white;
+
+      &.active {
+        border: 1px solid;
+      }
+
+      &.last {
+        margin-right: 0;
+      }
+
+      &:hover {
+        border: 1px solid;
+      }
+    }
+  }
+}
+
+.cta {
+  width: 40%;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  text-align: center;
+  margin: 0 4rem;
+  margin-bottom: 10%;
+
+  &__title {
+    margin-bottom: 2rem;
+  }
+
+  &__ornament {
+    width: 30%;
+  }
+
+  &__buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    margin-top: 3rem;
+  }
+
+  .btn {
+    width: 300px;
+
+    a {
+      margin-top: 3rem;
+      padding: 0.75rem 3rem;
+      font-size: 2rem;
+      text-transform: uppercase;
+      border: 1px solid #3c3c3c;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
