--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,2 +1,5 @@
 // Open Sans
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap');
+
+// Merriweather
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300,300i&display=swap');
