--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,82 @@
 .footer {
   width: 100%;
-  min-height: 300px;
-  background-color: grey;
+  min-height: 100vh;
+  margin-top: 2rem;
+  background: url("/images/Background.png") white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+  background-position-x: right;
   display: flex;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  &__contact {
+    width: 40%;
+    margin-top: 5%;
+    margin-right: 2%;
+    padding: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    h2 {
+      font-weight: 400;
+    }
+  }
+
+  &__ornament {
+    height: 2.25rem;
+    margin: 0.75rem 0;
+  }
+
+  &__bottom {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  &__socialIcons {
+    display: flex;
+    flex-direction: row;
+    margin-right: 10%;
+
+    div {
+      width: 50px;
+      height: 50px;
+      margin: 0 0.5rem;
+      margin-bottom: -1rem;
+      z-index: 2;
+      a {
+        width: 100%;
+        height: 100%;
+        font-size: 1.5rem;
+        border: 1px solid #3c3c3c;
+        text-decoration: none;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          background-color: #3c3c3c;
+          i {
+            color: white;
+          }
+        }
+      }
+    }
+  }
+
+  &__copyrightInfo {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-family: "Merriweather", serif;
+    font-size: 1.1rem;
+  }
 }
