--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
-  height: 100vh;
-  max-height: 1000px;
+  min-height: 100vh;
+  max-height: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
