--- a/src/components/DonateForm/DonateForm.scss
+++ b/src/components/DonateForm/DonateForm.scss
@@ -6,7 +6,38 @@
   background-repeat: no-repeat;
   background-position-x: right;
   background-position-y: top;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+
+  &__msg {
+    width: 100%;
+    background-color: #f8d113;
+    padding: 2rem 10%;
+
+    h4 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 1.25rem;
+    }
+
+    h4, p {
+      font-weight: 600;
+    }
+  }
+
+  &__form {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: flex-start;
+    // align-items: center;
+  }
+
+  &__thanks {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
