--- a/src/components/UserNavigation/UserNavigation.scss
+++ b/src/components/UserNavigation/UserNavigation.scss
@@ -12,10 +12,13 @@
   }
 
   &__greeting {
+    margin: 0.5rem 0;
     margin-right: 0.75rem;
   }
 
   &__icon {
+    margin: 0.5rem 0;
+    margin-right: 1rem;
     cursor: pointer;
     font-size: 1.25rem;
   }
