--- a/src/components/DonateFormStep3/DonateFormStep3.scss
+++ b/src/components/DonateFormStep3/DonateFormStep3.scss
@@ -6,15 +6,8 @@
     font-size: 1.25rem;
   }
 
-  // h3 {
-  //   font-size: 1.75rem;
-  //   font-weight: 600;
-  //   margin-top: 1.5rem;
-  // }
-
   form {
     margin: 2rem 0.5rem;
-    // font-size: 1.25rem;
 
     label {
       margin-bottom: 1rem;
@@ -41,10 +34,11 @@
     }
   }
 
-  &__inputCheckboxWrapper {
+  &__inputRadioWrapper {
+    margin-bottom: 3rem;
     p {
       font-weight: 600;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
     }
 
     label {
@@ -57,13 +51,23 @@
       text-align: center;
       margin-left: 1rem;
 
-      // input {
-      //   position: absolute;
-      //   opacity: 0;
-      //   cursor: pointer;
-      //   height: 0;
-      //   width: 0;
-      // }
+      .radio {
+        border: 1px solid;
+        padding: 5px 10px;
+      }
+
+
+      input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+
+        &:checked ~ .radio {
+          background-color:  #f8d113;
+        }
+      }
     }
   }
 
@@ -92,5 +96,12 @@
     border: 1px solid;
     background-color: transparent;
     outline: none;
+  }
+
+  &__searchResults {
+    h3 {
+      font-size: 1.75rem;
+      font-weight: 600;
+    }
   }
 }
