--- a/src/components/SearchResult/SearchResult.scss
+++ b/src/components/SearchResult/SearchResult.scss
@@ -1,4 +1,85 @@
-.result {
+.searchResult {
   margin-left: 10%;
   margin-top: 2rem;
+  width:  50%;
+
+  span {
+    font-size: 1.25rem;
+  }
+
+  h3 {
+    font-size: 1.75rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+  }
+
+  hr {
+    width: 40%;
+    margin-top: 1.75rem;
+  }
+
+  &__option {
+    margin: 1.75rem 0;
+ 
+    .radio {
+      display: block;
+      position: relative;
+      padding-left: 3.5rem;
+      margin-bottom: 12px;
+      cursor: pointer;
+      font-size: 22px;
+      user-select: none;
+
+      h4 {
+        font-size: 1.25rem;
+        font-family: "Merriweather", serif;
+        margin-bottom: 0.25rem;
+      }
+
+      p {
+        font-family: "Merriweather", serif;
+        font-size: 1rem;
+        font-style: italic;
+      }
+  
+      input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+  
+        &:checked ~ .radio__checkmark {
+          i {
+            display: inline-block;
+          }
+        }
+      }
+  
+      &__checkmark {
+        position: absolute;
+        top: 25%;;
+        left: 0;
+        height: 30px;
+        width: 30px;
+        background-color: transparent;
+        border: 1px solid;
+        text-align: center;
+  
+        i {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__btn {
+    width: 120px;
+    height: 60px;
+    margin: 3rem 1rem;
+    font-size: 1.3rem;
+    border: 1px solid;
+    background-color: transparent;
+    outline: none;
+  }
 }
